# vscode-android

./: .eslintrc.json  .gitignore  ANDROID_BUILD_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  ISSUES_AND_SOLUTIONS.md  LICENSE  README.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: BUILD_GUIDE.md
.github/workflows/: README.md  ci-cd.yml  quick-build.yml
e2e/: app.spec.ts  auth.spec.ts  editor.spec.ts
scripts/: setup-android-permissions.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: android.json
src-tauri/src/: codespaces.rs  commands.rs  conflict.rs  github.rs  lib.rs  sync.rs  types.rs
src/components/: ActivityBar.tsx  AuthScreen.tsx  CodespaceSelector.tsx  CommandPalette.tsx  EditorArea.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FindReplaceWidget.tsx  GitPanel.tsx  MainLayout.tsx  QuickOpen.tsx  SearchPanel.tsx  SettingsPanel.tsx  SideBar.tsx  SplashScreen.test.tsx  SplashScreen.tsx  StatusBar.tsx  TerminalPanel.tsx
src/hooks/: useAuth.ts  useCodespaces.ts  useEditor.ts  useFileSystem.ts  useSync.ts
src/lib/: utils.test.ts  utils.ts
src/test/: setup.ts
src/types/: index.ts
