[package]
name = "vscode-android"
version = "1.0.0"
description = "VS Code-like Android app with GitHub Codespaces sync"
authors = ["VSCode Android Team"]
edition = "2021"

[lib]
name = "vscode_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["android-activity"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-websocket = "2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "websocket"] }
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
diffy = "0.3"
base64 = "0.21"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
tungstenite = "0.21"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
